kubernetes/week2/practise-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: storage-pod
  namespace: dev

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: practice-storage
          mountPath: /data

  volumes:
    - name: practice-storage
      persistentVolumeClaim:
        claimName: practise-pvc
