kubernetes/week2/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: dev

spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
