kubernetes/week2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: practice-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: python-app-service
                port:
                  number: 5000
